Revert "Remove dark mode, fix scroll, add 3D iPhone, prioritize cash prize (2.5M > iPhone), improve UX"
This reverts commit 6802cfffd055726abe8629a1d3534b8602b1d34b.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+@theme {
+  --color-scheme: light dark;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -13,15 +17,9 @@ body {
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #faf8ff;
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-
-/* 3D iPhone Perspective */
-.perspective-1000 {
-  perspective: 1000px;
 }
